--- a/Projet_cave/WebContent/index.xhtml
+++ b/Projet_cave/WebContent/index.xhtml
@@ -9,7 +9,7 @@
       
 
 <h:head>
-	<title>index</title>
+	<title>la divine boisson</title>
 	
 	<h:outputStylesheet library = "css" name = "style_perso.css"/>
 	
@@ -56,7 +56,7 @@
 	<h:form>
 	 <ui:repeat value="#{produitBean.listeVin}" var="bouteille">
 	
-		<h:link>
+		<h:commandLink action="#{singlebottleBean.naviguerVersSingleBottle(bouteille.idAlcool)}">
 		<b:panel class="item">
 		<div class="conteneurphoto">
 		<b:image value="#{bouteille.photo}"  class="photoitem"/>
@@ -66,11 +66,11 @@
 		<p class="prix">#{bouteille.prix} €</p>
 		
 		</b:panel>
-		</h:link>
+		</h:commandLink>
 	</ui:repeat>
 	<ui:repeat value="#{produitBean.listeChampagne}" var="bouteille">
 	
-		<h:link>
+		<h:commandLink action="#{singlebottleBean.naviguerVersSingleBottle(bouteille.idAlcool)}">
 		<b:panel class="item">
 		<div class="conteneurphoto">
 		<b:image value="#{bouteille.photo}"  class="photoitem"/>
@@ -80,11 +80,11 @@
 		<p class="prix">#{bouteille.prix} €</p>
 		
 		</b:panel>
-		</h:link>
+		</h:commandLink>
 	</ui:repeat>
 	<ui:repeat value="#{produitBean.listeSpiriteux}" var="bouteille">
 	
-		<h:link>
+		<h:commandLink action="#{singlebottleBean.naviguerVersSingleBottle(bouteille.idAlcool)}">
 		<b:panel class="item">
 		<div class="conteneurphoto">
 		<b:image value="#{bouteille.photo}"  class="photoitem"/>
@@ -94,11 +94,11 @@
 		<p class="prix">#{bouteille.prix} €</p>
 		
 		</b:panel>
-		</h:link>
+		</h:commandLink>
 	</ui:repeat>
 	<ui:repeat value="#{produitBean.listeBiere}" var="bouteille">
 	
-		<h:link>
+		<h:commandLink action="#{singlebottleBean.naviguerVersSingleBottle(bouteille.idAlcool)}">
 		<b:panel class="item">
 		<div class="conteneurphoto">
 		<b:image value="#{bouteille.photo}"  class="photoitem"/>
@@ -108,7 +108,7 @@
 		<p class="prix">#{bouteille.prix} €</p>
 		
 		</b:panel>
-		</h:link>
+		</h:commandLink>
 	</ui:repeat>
 	</h:form>
 	
